feat: cbor openapi
