# src/services/todos/handler.rs
@@ -1,136 +1,95 @@
 use crate::domain::todo::{TodoEntity, TodoEntityBuilder};
 use crate::modules::db::schema::todos::dsl::*;
-use axum::async_trait;
-use axum::extract::Host;
-use axum::http::Method;
-use axum_extra::extract::CookieJar;
+use anyhow::Result;
 use derive_builder::Builder;
 use diesel::{ExpressionMethods, QueryDsl, SelectableHelper};
 use diesel_async::pooled_connection::deadpool::Pool;
 use diesel_async::{AsyncPgConnection, RunQueryDsl};
-use gen_server::apis::todo::{
-    CreateTodoResponse, DeleteTodoResponse, GetTodoResponse, GetTodosResponse, Todo,
-    UpdateTodoResponse,
-};
-use gen_server::models::{
-    DeleteTodoPathParams, GetTodoPathParams, GetTodosQueryParams, UpdateTodo, UpdateTodoPathParams,
-};
-use uuid::Uuid;
+use gen_server::models::{GetTodosQueryParams, Todo, UpdateTodo};
 
 #[derive(Clone, Builder)]
-pub struct TodoService {
+pub struct TodosService {
     pool: Pool<AsyncPgConnection>,
 }
 
-#[async_trait]
-impl Todo for TodoService {
-    async fn create_todo(
+impl TodosService {
+    pub async fn find_todos(
         &self,
-        _method: Method,
-        _host: Host,
-        _cookies: CookieJar,
-        UpdateTodo {
-            title: body_title,
-            description: body_description,
-            meta: body_meta,
-        }: UpdateTodo,
-    ) -> Result<CreateTodoResponse, ()> {
-        let mut conn = self.pool.get().await.expect("Failed to get connection");
-        let new_todo = TodoEntityBuilder::default()
-            .id(Uuid::new_v4())
-            .created_at(None)
-            .updated_at(None)
-            .title(body_title)
-            .description(body_description)
-            .metadata(body_meta.map(|meta| serde_json::to_value(meta).expect("Failed to serialize meta")))
-            .build()
-            .expect("Failed to build todo");
-
-        let res: TodoEntity = diesel::insert_into(todos)
-            .values(&new_todo)
-            .get_result(&mut conn)
-            .await
-            .expect("Failed to insert todo");
-
-        Ok(CreateTodoResponse::Status201_SuccessfulOperation(
-            res.into(),
-        ))
-    }
-
-    async fn delete_todo(
-        &self,
-        _method: Method,
-        _host: Host,
-        _cookies: CookieJar,
-        _path_params: DeleteTodoPathParams,
-    ) -> Result<DeleteTodoResponse, ()> {
-        let mut conn = self.pool.get().await.expect("Failed to get connection");
-        let path_id = Uuid::parse_str(&_path_params.id).expect("Failed to parse id");
-
-        diesel::delete(todos.filter(id.eq(path_id)))
-            .execute(&mut conn)
-            .await
-            .expect("Failed to delete todo");
-
-        Ok(DeleteTodoResponse::Status202_SuccessfulOperation)
-    }
-
-    async fn get_todo(
-        &self,
-        _method: Method,
-        _host: Host,
-        _cookies: CookieJar,
-        GetTodoPathParams { id: path_id }: GetTodoPathParams,
-    ) -> Result<GetTodoResponse, ()> {
-        let mut conn = self.pool.get().await.expect("Failed to get connection");
-        let path_id = Uuid::parse_str(&path_id).expect("Failed to parse id");
+        GetTodosQueryParams { limit, offset }: GetTodosQueryParams,
+    ) -> Result<Vec<Todo>> {
+        let mut conn = self.pool.get().await?;
 
         let res = todos
-            .filter(id.eq(path_id))
-            .select(TodoEntity::as_select())
-            .first(&mut conn)
-            .await
-            .expect("Failed to load todo");
-
-        Ok(GetTodoResponse::Status200_SuccessfulOperation(res.into()))
-    }
-
-    async fn get_todos(
-        &self,
-        _method: Method,
-        _host: Host,
-        _cookies: CookieJar,
-        GetTodosQueryParams { limit, offset }: GetTodosQueryParams,
-    ) -> Result<GetTodosResponse, ()> {
-        let mut conn = self.pool.get().await.expect("Failed to get connection");
-
-        let res: Vec<TodoEntity> = todos
             .filter(title.is_not_null())
             .select(TodoEntity::as_select())
             .offset(offset.unwrap_or_else(|| 0) as i64)
             .limit(limit.unwrap_or_else(|| 10) as i64)
             .load(&mut conn)
-            .await
-            .expect("Failed to load todos");
+            .await?;
 
         let res = res.into_iter().map(|todo| todo.into()).collect();
-        Ok(GetTodosResponse::Status200_SuccessfulOperation(res))
+
+        Ok(res)
     }
 
-    async fn update_todo(
-        &self,
-        _method: Method,
-        _host: Host,
-        _cookies: CookieJar,
-        UpdateTodoPathParams { .. }: UpdateTodoPathParams,
-        _body: UpdateTodo,
-    ) -> Result<UpdateTodoResponse, ()> {
-        todo!("Not implemented");
-    }
-}
+    pub async fn find_one(&self, todo_id: String) -> Result<Todo> {
+        let mut conn = self.pool.get().await?;
 
-impl AsRef<TodoService> for TodoService {
-    fn as_ref(&self) -> &TodoService {
-        self
+        let res = todos
+            .filter(id.eq(todo_id))
+            .select(TodoEntity::as_select())
+            .first(&mut conn)
+            .await?;
+
+        Ok(res.into())
+    }
+
+    pub async fn create_one(&self, body: UpdateTodo) -> Result<Todo> {
+        let mut conn = self.pool.get().await?;
+        let new_todo = TodoEntityBuilder::default()
+            .id(cuid2::create_id())
+            .created_at(None)
+            .updated_at(None)
+            .title(body.title)
+            .description(body.description)
+            .metadata(
+                body.meta
+                    .map(|meta| serde_json::to_value(meta).expect("Failed to serialize meta")),
+            )
+            .build()?;
+
+        let res: TodoEntity = diesel::insert_into(todos)
+            .values(&new_todo)
+            .get_result(&mut conn)
+            .await?;
+
+        Ok(res.into())
+    }
+
+    pub async fn delete_one(&self, todo_id: String) -> Result<()> {
+        let mut conn = self.pool.get().await?;
+
+        diesel::delete(todos.filter(id.eq(todo_id)))
+            .execute(&mut conn)
+            .await?;
+
+        Ok(())
+    }
+
+    pub async fn update_one(&self, todo_id: String, body: UpdateTodo) -> Result<Todo> {
+        let mut conn = self.pool.get().await?;
+
+        let res: TodoEntity = diesel::update(todos.filter(id.eq(todo_id)))
+            .set((
+                title.eq(body.title),
+                description.eq(body.description),
+                metadata.eq(body
+                    .meta
+                    .map(|meta| serde_json::to_value(meta).expect("Failed to serialize meta"))),
+            ))
+            .get_result(&mut conn)
+            .await?;
+
+        Ok(res.into())
     }
 }
